[LAB-34] Corrected runner params
Signed-off-by: Andreas Pieber <anpieber@gmail.com>